--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,19 +1,51 @@
-header p {
-  padding: 28px 0px;
+header {
+  line-height: 75px;
+  background-color: lightblue;
 }
 
-nav p {
-  padding: 68px 0px;
+nav {
+  line-height: 150px;
+  background-color: cornflowerblue;
 }
 
-.section1 p {
-  padding: 55px;
+.section1 {
+  line-height: 125px;
 }
 
-.section2 p {
-  padding: 110px;
+.section2 {
+  line-height: 240px;
+  background-color: cyan;
 }
 
-footer p {
-  padding: 30px;
+footer {
+  line-height: 80px;
+  background-color: aquamarine;
+}
+
+@media screen and (min-width: 768px) {
+
+  header {
+    line-height: 100px;
+    background-color: coral;
+  }
+  
+  nav {
+    line-height: 600px;
+    background-color: lightpink;
+  }
+  
+  .section1 {
+    line-height: 200px;
+    background-color: orange;
+  }
+  
+  .section2 {
+    line-height: 250px;
+    background-color: peru;
+  }
+  
+  footer {
+    line-height: 150px;
+    background-color: fuchsia;
+  }
 }
