--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,15 +1,15 @@
 header {
-  line-height: 75px;
+  /* line-height: 75px; */
   background-color: lightblue;
 }
 
 nav {
-  line-height: 150px;
+  /* line-height: 150px; */
   background-color: cornflowerblue;
 }
 
 .section1 {
-  line-height: 125px;
+  /* line-height: 125px; */
 }
 
 #c {
@@ -21,7 +21,7 @@ nav {
 }
 
 .section2 {
-  line-height: 240px;
+  /* line-height: 240px; */
 }
 
 div:nth-child(1) {
@@ -41,19 +41,19 @@ div:nth-child(4) {
 }
 
 footer {
-  line-height: 80px;
+  /* line-height: 80px; */
   background-color: aquamarine;
 }
 
 @media screen and (min-width: 768px) {
 
   header {
-    line-height: 100px;
+    /* line-height: 100px; */
     background-color: coral;
   }
   
   nav {
-    line-height: 600px;
+    /* line-height: 600px; */
     background-color: lightpink;
   }
 
@@ -82,15 +82,15 @@ footer {
   }
   
   .section1 {
-    line-height: 200px;
+    /* line-height: 200px; */
   }
   
   .section2 {
-    line-height: 250px;
+    /* line-height: 250px; */
   }
   
   footer {
-    line-height: 150px;
+    /* line-height: 150px; */
     background-color: indianred;
   }
 }
