--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
   height: 9.8%;
   text-align: center;
-  float: left;
+  display: flex;
   border: 1px solid black;
 }
 
@@ -10,7 +10,7 @@ nav {
   width: 100%;
   height: 19.6%;
   text-align: center;
-  float: left;
+  /* display: flex; */
   border: 1px solid black;
 }
 
@@ -18,68 +18,90 @@ nav {
   height: 16.3%;
   width: 100%;
   border: 1px solid black;
-  float: left;
+  display: flex;
 }
 
-/* .section2 {
+.section2 {
   width: 100%;
   height: 65.4%;
-  float: left;
-} */
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .section2 div {
   width: 50%;
-  height: 32.6%;
-  float: left;
+  display: flex;
   border: 1px solid black;
 }
 
 footer {
   width: 100%;
   height: 10.4%;
-  float: left;
+  display: flex;
   border: 1px solid black;
 }
 
 /* Media Query for Desktop */
 @media screen and (min-width: 768px) {
+  body {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
   header {
     width: 100%;
-    height: 13%;
+    height: 14%;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   nav {
-    width: 20.8%;
-    height: 78.1%;
-    float: left;
+    width: 20%;
+    height: 86%;
+    display: flex;
+    flex-wrap: wrap;
   }
 
-  /* .section1 {
-    width: 80.1%;
-    height: 26%;
-    float: left;
-  } */
+  span {
+    width: 80%;
+    height: 86%
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+
+  .section1 {
+    width: 100%;
+    height: 28.6%;
+    display: flex;
+    display: wrap;
+  }
 
   .section1 div {
-    width: 39.5%;
-    height: 26%;
-    float: left;
+    width: 98%;
+    height: 100%;
+    display: flex;
+    display: wrap;
   } 
 
-  /* .section2 {
-    width: 80.1%;
-    height: 32.6%;
-    float: left;
-  } */
+  .section2 {
+    width: 100%;
+    height: 35.7%;
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   .section2 div {
-    width: 19.8%;
-    height: 32.6%;
+    width: 25%;
+    height: 100%;
+    display: flex;
   }
 
   footer {
-    width: 79.2%;
-    height: 19.5%;
+    width: 100%;
+    height: 21.7%;
+    display: flex;
+    flex-wrap: wrap;
   }
 
 }
