--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,7 +1,6 @@
 header {
   width: 100%;
   height: 9.8%;
-  text-align: center;
   display: flex;
   border: 1px solid black;
 }
@@ -9,8 +8,7 @@ header {
 nav {
   width: 100%;
   height: 19.6%;
-  text-align: center;
-  /* display: flex; */
+  display: flex;
   border: 1px solid black;
 }
 
@@ -64,7 +62,6 @@ footer {
 
   span {
     width: 80%;
-    height: 86%
     display: flex;
     flex-wrap: wrap;
     
@@ -104,4 +101,67 @@ footer {
     flex-wrap: wrap;
   }
 
+}
+
+/* Media Query for Tablet */
+@media screen and (min-width: 600px) {
+  body {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  header {
+    width: 100%;
+    height: 14%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  nav {
+    width: 20%;
+    height: 86%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  span {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+
+  .section1 {
+    width: 100%;
+    height: 28.6%;
+    display: flex;
+    display: wrap;
+  }
+
+  .section1 div {
+    width: 98%;
+    height: 100%;
+    display: flex;
+    display: wrap;
+  } 
+
+  .section2 {
+    width: 100%;
+    height: 35.7%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .section2 div {
+    width: 25%;
+    height: 100%;
+    display: flex;
+  }
+
+  footer {
+    width: 100%;
+    height: 21.7%;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
