--- a/styles/base.css
+++ b/styles/base.css
@@ -1,10 +1,19 @@
 * {
   box-sizing: border-box;
+  text-align: center;
 }
 
 body {
   margin-left: auto;
   margin-right: auto;
+}
+
+
+/* Media Query for Tablet */
+@media screen and (min-width: 600px){
+  body {
+    max-width: 768px;
+  }
 }
 
 /* Media Query for Desktop */
